deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    app: dog-city
    bytes: dog-city
spec:
  ports:
  - port: 3000
  selector:
    app: dog-city
---
apiVersion: v1
kind: Service
metadata:
  name: name
  labels:
    app: nameserver
    bytes: nameserver
spec:
  ports:
  - port: 5001
  selector:
    app: nameserver
---
apiVersion: v1
kind: Service
metadata:
  name: location
  labels:
    app: locationserver
    bytes: locationserver
spec:
  ports:
  - port: 5002
  selector:
    app: locationserver
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev-ops
spec:
  tls:
   - secretName: 
  rules:
  - host:  
    http:
      paths:
      - path: /
        backend:
          serviceName: client
          servicePort: 3000
---
apiVersion: v1
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: client
  labels:
    app: dog-city
    bytes: dog-city
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dog-city
  template:
    metadata:
      labels:
        app: dog-city
        bytes: dog-city
    spec:
      containers:
      - image: vikpande/dog-city
        name: dog-city
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: name
  labels:
    app: nameserver
    bytes: nameserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nameserver
  template:
    metadata:
      labels:
        app: nameserver
        bytes: nameserver
    spec:
      containers:
      - image: vikpande/nameserver
        name: nameserver
        ports:
        - containerPort: 3002
        ---
apiVersion: v1
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: location
  labels:
    app: locationserver
    bytes: locationserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locationserver
  template:
    metadata:
      labels:
        app: locationserver
        bytes: locationserver
    spec:
      containers:
      - image: vikpande/locationserver
        name: locationserver
        ports:
        - containerPort: 3003
